implementa story_2_4
